assets/sass/style.sass
@use "variables" as vars
@use "mixins" as mix

$folder-padding: 1.5rem
$folder-dim: 6rem
$scrollbar-color-thumb: rgba(255, 255, 255, 0.35)
$scrollbar-color-track: rgba(255, 255, 255, 0.075)
$scrollbar-width-legacy: 1.5rem
$width-threshold: 530px
$threshold-diff: 43px // 35, 37, 40, 43

:root
  background-attachment: fixed

// RESET
*, *::before, *::after
  -webkit-box-sizing: border-box
  box-sizing: border-box
  outline: none
  margin: 0
  padding: 0

// BASIC
html
  font-size: 60%

html, body, header, footer
  width: 100%

main
  -webkit-box-flex: 1
  -ms-flex: auto
  flex: auto
  overflow: auto
  height: 100vh

#main-content
  position: fixed
  top: vars.$menubar-height
  width: 100%
  height: calc(100% - vars.$menubar-height)

// Modern browsers
@supports (scrollbar-width: auto)
  html
    scrollbar-color: $scrollbar-color-thumb $scrollbar-color-track
    scrollbar-width: auto
    -ms-scrollbar-track-color: $scrollbar-color-track
    scrollbar-track-color: $scrollbar-color-track

// Legacy browsers
@supports selector(::-webkit-scrollbar)
  ::-webkit-scrollbar-thumb
    background: $scrollbar-color-thumb
    border-radius: vars.$border-radius

  ::-webkit-scrollbar-track
    background: $scrollbar-color-track

  ::-webkit-scrollbar
    max-width: $scrollbar-width-legacy
    max-height: $scrollbar-width-legacy

body
  display: -webkit-box
  display: -ms-flexbox
  display: flex
  -webkit-box-orient: vertical
  -webkit-box-direction: normal
  -ms-flex-direction: column
  flex-direction: column
  font-family: vars.$font-family
  font-variation-settings: "wdth" 100
  font-optical-sizing: auto
  // -webkit-font-smoothing: antialiased
  // -moz-osx-font-smoothing: grayscale
  line-height: 1.8
  color: vars.$font-color
  background-color: vars.$background-color
  background-image: vars.$background-gradient
  background-image: -o-radial-gradient(vars.$background-color, vars.$foreground-color, 225%) 
  //background-image: -moz-radial-gradient(center, ellipse cover, vars.$background-color 0%, vars.$foreground-color 225%)
  background-repeat: no-repeat
  overflow: hidden
  background-attachment: fixed
  
  // Adds a repeating grid pattern to the background to mimic the look of a real terminal
  // &::after
  //   content: ""
  //   position: absolute
  //   top: 0
  //   left: 0
  //   width: 100vw
  //   height: 100vh
  //   background: repeating-linear-gradient(0deg, rgba(black, 0.15), rgba(black, 0.15) 1px, transparent 1px, transparent 2px)
  //   pointer-events: none

a
  text-decoration: none
  color: vars.$secondary-font-color
  cursor: pointer

canvas
  display: block

::selection
  background: vars.$selection-color
  text-shadow: none

// Must keep selection pseudo-elements separate, else it won't work
::-moz-selection
  background: vars.$selection-color
  text-shadow: none

.folder
  @include mix.disable-select()
  gap: $folder-padding
  -webkit-box-pack: start
  -ms-flex-pack: start
  justify-content: flex-start
  padding-top: $folder-padding
  padding-right: $folder-padding
  -webkit-box-orient: vertical
  -webkit-box-direction: normal
  -ms-flex-direction: column
  flex-direction: column
  -webkit-box-align: end
  -ms-flex-align: end
  align-items: flex-end
  display: -webkit-box
  display: -ms-flexbox
  display: flex
  float: right
  width: calc($folder-dim * 1.3)

  &-button
    cursor: default
    appearance: button
    -webkit-appearance: button
    -moz-appearance: button
    background-color: transparent
    background-image: none
    border: none

    &:active
      -webkit-filter: brightness(75%)
      -ms-filter: brightness(75%)
      filter: brightness(75%)

    &-item
      align-items: center

      img
        -o-object-fit: contain
        object-fit: contain
        max-width: 100%
        display: block
        width: $folder-dim
        height: $folder-dim

      span
        @include mix.text-shadow(0, 0, 0.75rem, rgba(0, 0, 0, 0.25))
        @include mix.disable-select()
        text-align: center
        -webkit-line-clamp: 2
        line-clamp: 2
        overflow: hidden
        display: -webkit-box
        font-size: 1.24rem
        font-weight: 500
        color: vars.$menubar-font-color
        -webkit-box-orient: vertical
        box-orient: vertical

// BACKGROUND PARTICLES
#particles-js
  position: fixed
  width: 100%
  height: 100%
  background-repeat: no-repeat
  background-size: cover
  background-position: 50% 50%

.dialogue
  @include mix.blur(2.25rem, rgba(45, 45, 45, 0.6))
  @include mix.disable-select()
  font-family: vars.$font-family
  display: none
  position: absolute
  inline-size: min-content
  width: 27rem
  border-radius: 1rem
  padding: 2rem
  top: 30%
  left: 30%
  border: 1px solid rgba(255, 255, 255, 0.17)
  outline: 1px solid rgba(0, 0, 0, 0.75)
  color: white
  -webkit-box-shadow: vars.$box-shadow
  box-shadow: vars.$box-shadow //0px 15px 25px 0px rgba(0, 0, 0, 0.5)

  .pp-body
    text-align: center

    img
      display: inline
      width: 6rem

  .warning
    font-weight: 700
    font-size: 1.36rem

  .hint
    font-size: 1.25rem

  .actions
    padding-top: 1rem

  .alert-btn
    width: 10rem
    padding: 0.35rem 0.2rem
    margin: 0 0.5rem
    font-size: 1.35rem
    border-width: 0
    border-radius: 0.625rem
    color: white
    background: rgb(115, 118, 115)

    &:active
      background: rgb(145, 148, 145)

    &.confirm
      background: linear-gradient(to bottom, #db6bfa, #993db3)
      
      &:active
        background: #993db3

.windows
  position: absolute
  z-index: 0

@media screen and (max-width: $width-threshold)
  html
    font-size: 55%

  .dialogue .alert-btn
    width: 9.75rem

@media screen and (max-width: calc($width-threshold - $threshold-diff))
  html
    font-size: 50%

  .dialogue .alert-btn
    width: 9.75rem

@media screen and (max-width: calc($width-threshold - (2 * $threshold-diff)))
  html
    font-size: 45%

  .dialogue .alert-btn
    width: 9.75rem

@media screen and (max-width: calc($width-threshold - (3 * $threshold-diff)))
  html
    font-size: 40%

  .dialogue .alert-btn
    width: 9.62rem

@media screen and (max-width: calc($width-threshold - (4 * $threshold-diff)))
  html
    font-size: 35%

  .dialogue .alert-btn
    width: 9.36rem

@media screen and (max-width: calc($width-threshold - (5 * $threshold-diff)))
  html
    font-size: 30%

  .dialogue .alert-btn
    width: 9rem
    
@media screen and (max-width: calc($width-threshold - (6 * $threshold-diff)))
  html
    font-size: 25%

  .dialogue .alert-btn
    width: 8.45rem

